--- a/src/Components/Overlay.css
+++ b/src/Components/Overlay.css
@@ -2,7 +2,12 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 10%;
+  width: 20%;
   height: auto;
   background-color: hsla(0, 0%, 0%, 0.5);
+  object-fit: contain;
+}
+
+.overlay-container img {
+  max-width: 100%;
 }
