--- a/src/Components/Overlay.css
+++ b/src/Components/Overlay.css
@@ -2,7 +2,7 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 20%;
+  max-width: 20%;
   height: auto;
   background-color: hsla(0, 0%, 0%, 0.5);
   object-fit: contain;
